--- a/elasticsearch.yaml
+++ b/elasticsearch.yaml
@@ -26,6 +26,8 @@ spec:
       labels:
         app: elasticsearch
     spec:
+      securityContext:                # 👈 ensures data directory permissions
+        fsGroup: 1000
       containers:
         - name: elasticsearch
           image: docker.elastic.co/elasticsearch/elasticsearch:7.17.0-jdk11
@@ -33,7 +35,7 @@ spec:
             - name: discovery.type
               value: single-node
             - name: ES_JAVA_OPTS
-              value: "-Xms512m -Xmx512m"
+              value: "-Xms512m -Xmx512m -XX:-UseContainerSupport"
             - name: xpack.security.enabled
               value: "false"
           ports:
@@ -65,3 +67,4 @@ spec:
     - protocol: TCP
       port: 9200
       targetPort: 9200
+  type: ClusterIP   # change to NodePort or LoadBalancer if you need external access
